Rename API endpoints (prev names still works)
